Fix alignment of navbar sign in button

--- a/app/assets/stylesheets/navbar.css.less
+++ b/app/assets/stylesheets/navbar.css.less
@@ -66,7 +66,10 @@
     padding-right: 17px;
 
     @media(min-width: @navbar-collapse-width) {
-      width: 630px;
+      width: 370px;
+    }
+    @media(min-width: @screen-sm-min) {
+      width: 570px;
     }
     @media(min-width: @screen-md-min) {
       width: 815px;
@@ -99,11 +102,9 @@
   }
 
   .right {
-    width: @navbar-sides-width;
     @media(max-width: @navbar-collapse-width) {
       width: 50px;
     }
-
 
     flex-shrink: 0;
     align-self: flex-end;
